/*
 * @begin:license
 *
 * Copyright (c) 2015-2019, Benjamin Niemann <pink@odahoda.de>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 *
 * @end:license
 */

syntax = "proto2";

package noisicaa.pb;

message Pos2F {
  required float x = 1;
  required float y = 2;
}

message SizeF {
  required float width = 1;
  required float height = 2;
}

message Color {
  required float r = 1;
  required float g = 2;
  required float b = 3;
  required float a = 4 [default=1.0];
}

message Fraction {
  optional int64 numerator = 1;
  optional int64 denominator = 2;
}

message Pitch {
  optional string name = 1;
}

message KeySignature {
  optional string name = 1;
}

message TimeSignature {
  optional uint32 upper = 1;
  optional uint32 lower = 2;
}

message Clef {
  enum Type {
    FrenchViolin = 1;
    Treble = 2;
    Soprano = 3;
    MezzoSoprano = 4;
    Alto = 5;
    Tenor = 6;
    Baritone = 7;
    Bass = 8;
    Subbass = 9;
  }

  optional Type type = 1;
}
